--- a/index.html
+++ b/index.html
@@ -54,13 +54,18 @@
 
     </div>
     <div id="google">
-      <a  id="0" onclick="editarDato(this)">
+      <a  id="1" onclick="buscarDato(this)">
         <h1>G</h1>
       </a>
     </div>
 
-    <div id="prueba">
+      <div id="prueba">  
+        <p id="info"></p>
       
+        <input type="textfield"  id="imput" aria-describedby="emailHelp">
+        <a  class="btn btn-outline-success" id="1" onclick="">aa</a>
+      
+    </div>
     </div>
   </div>
 
