--- a/editar.html
+++ b/editar.html
@@ -22,10 +22,10 @@
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav">
         <li class="nav-item active">
-          <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+          <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item active">
-          <a class="nav-link" href="editar.html">Editar <span class="sr-only">(current)</span></a>
+          <a class="nav-link" href="#">Editar <span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item active">
           <a class="nav-link" href="#">sobre nosotos <span class="sr-only">(current)</span></a>
@@ -39,40 +39,21 @@
 
   <div class="container">
 
-    <div id="catalogo" class="col-12">
-
-    </div>
+        <div id="catalogo" class="col-12">
 
 
+        </div>
+        <div  id="prueba">  
+            <p id="info"></p>
+            <a  class="btn btn-outline-success" onclick="buscarDato(this)" id="0">Datos</a>
+        </div>
 
-    <div id="informacion" style="display: none;">
-      <a onclick="mostrar()">
-        <h1>
-          <--  
-          </h1>
-      </a>
 
-    </div>
-    <div id="google">
-      <a  id="0" onclick="buscarDato(this)">
-        <h1>G</h1>
-      </a>
-    </div>
 
-      <div id="prueba">  
-        <p id="info"></p>
-      
-        <input type="textfield"  id="imput" aria-describedby="emailHelp">
-        <a  class="btn btn-outline-success" id="0" onclick="">aa</a>
-      
-    </div>
-    </div>
   </div>
 
 
 
-  <script src="script.js" charset="utf-8"></script>
+  <script src="scriptEditar.js" charset="utf-8"></script>
   </div>
 </body>
-
-</html>
